# OCAMLMiner

./: INSTALL.md  README.md  dune  dune-project  index.html  lets_play.sh  main.ml
lib/: board.ml  board.mli  canvas_utils.ml  canvas_utils.mli  canvas_utils_js.ml  canvas_utils_js.mli  csv_manager.ml  dune  load.ml  load.mli  timer.ml  timer.mli
test/: dune  test_canit.ml  test_csv_manager.ml  test_timer.ml
